impl depositstake for spl

--- a/libs/spl_stake_pool/Cargo.toml
+++ b/libs/spl_stake_pool/Cargo.toml
@@ -12,5 +12,7 @@ jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation", rev 
 lazy_static = "^1.0"
 solana-program = "^1.9"
 spl-stake-pool = "^0.6.4"
+spl-token = "^3.0"
 stakedex_deposit_sol_interface = { path = "../../interfaces/stakedex_deposit_sol_interface" }
+stakedex_deposit_stake_interface = { path = "../../interfaces/stakedex_deposit_stake_interface" }
 stakedex_sdk_common = { path = "../../common" }
