--- a/libs/spl_stake_pool/Cargo.toml
+++ b/libs/spl_stake_pool/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "^1.0"
+bincode = "^1.0"
 borsh = "^0.9"
 jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation", rev = "8e360617"}
 lazy_static = "^1.0"
