--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "^1.0"
+jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation", rev = "8e360617"}
+solana-sdk = "^1.9"
+spl-token = "^3.0"
+stakedex_interface = { path = "../interfaces/stakedex_interface" }
+stakedex_sdk_common = { path = "../common" }
+stakedex_spl_stake_pool = { path = "../libs/spl_stake_pool" }
