--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "^1.0"
-jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation", rev = "8e360617"}
+anyhow = { workspace = true }
+jupiter-core = { workspace = true }
 rust_decimal = "^1.0"
-solana-program = "^1.9"
-spl-token = "^3.0"
-stakedex_deposit_sol_interface = { path = "../interfaces/stakedex_deposit_sol_interface" }
-stakedex_interface = { path = "../interfaces/stakedex_interface" }
+solana-program = { workspace = true }
+spl-token = { workspace = true }
+stakedex_deposit_sol_interface = { workspace = true }
+stakedex_interface = { workspace = true }
