--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ solana-sdk = "^1.9"
 spl-token = "^3.0"
 stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_interface" }
 stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
+stakedex_eversol_stake_pool = { path = "./libs/eversol_stake_pool" }
 stakedex_interface = { path = "./interfaces/stakedex_interface" }
 stakedex_sdk_common = { path = "./common" }
+stakedex_socean_stake_pool = { path = "./libs/socean_stake_pool" }
 stakedex_spl_stake_pool = { path = "./libs/spl_stake_pool" }
 stakedex_withdraw_stake_interface = { path = "./interfaces/stakedex_withdraw_stake_interface" }
