--- a/libs/eversol_stake_pool/Cargo.toml
+++ b/libs/eversol_stake_pool/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stakedex_socean_stake_pool"
+name = "stakedex_eversol_stake_pool"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,10 +11,7 @@ bincode = "^1.0"
 borsh = "^0.9"
 jupiter-core = { workspace = true }
 solana-program = { workspace = true }
-
-spl-stake-pool = "^0.6.4"
-# { git = "https://github.com/igneous-labs/solana-program-library", branch = "release/v0.1"} incompatible with solana-program ^1.9
-
+spl-stake-pool = { git = "https://github.com/everstake/solana-program-library", rev = "22534fe3885e698598e92b2fe20da3a8adbfc5ff"}
 spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_deposit_stake_interface = { workspace = true }
