--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -10,6 +10,8 @@ anyhow = { workspace = true }
 jupiter-core = { workspace = true }
 solana-sdk = { workspace = true }
 spl-token = { workspace = true }
+stakedex_eversol_stake_pool = { workspace = true }
 stakedex_interface = { workspace = true }
 stakedex_sdk_common = { workspace = true }
+stakedex_socean_stake_pool = { workspace = true }
 stakedex_spl_stake_pool = { workspace = true }
