finish marinade impl

--- a/libs/marinade/Cargo.toml
+++ b/libs/marinade/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stakedex_eversol_stake_pool"
+name = "stakedex_marinade"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,13 +7,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-bincode = { workspace = true }
 borsh = { workspace = true }
 jupiter-core = { workspace = true }
+marinade_finance_interface = { workspace = true }
 solana-program = { workspace = true }
-spl-stake-pool = { git = "https://github.com/everstake/solana-program-library", rev = "22534fe3885e698598e92b2fe20da3a8adbfc5ff"}
 spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_deposit_stake_interface = { workspace = true }
 stakedex_sdk_common = { workspace = true }
-stakedex_withdraw_stake_interface = { workspace = true }
