--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ members = [
 
 [workspace.dependencies]
 anyhow = "^1.0"
+bincode = "^1.0"
+borsh = "^0.9"
 jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation", rev = "8e360617"}
+marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", rev = "d625979" }
 solana-program = "^1.9"
 solana-sdk = "^1.9"
 spl-token = "^3.0"
@@ -17,6 +20,7 @@ stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_int
 stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
 stakedex_eversol_stake_pool = { path = "./libs/eversol_stake_pool" }
 stakedex_interface = { path = "./interfaces/stakedex_interface" }
+stakedex_marinade = { path = "./libs/marinade" }
 stakedex_sdk_common = { path = "./common" }
 stakedex_socean_stake_pool = { path = "./libs/socean_stake_pool" }
 stakedex_spl_stake_pool = { path = "./libs/spl_stake_pool" }
