--- a/interfaces/stakedex_deposit_stake_interface/Cargo.toml
+++ b/interfaces/stakedex_deposit_stake_interface/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-borsh = "^0.9"
-solana-program = "^1.9"
+borsh = { workspace = true }
+solana-program = { workspace = true }
