--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -12,6 +12,7 @@ solana-sdk = { workspace = true }
 spl-token = { workspace = true }
 stakedex_eversol_stake_pool = { workspace = true }
 stakedex_interface = { workspace = true }
+stakedex_marinade = { workspace = true }
 stakedex_sdk_common = { workspace = true }
 stakedex_socean_stake_pool = { workspace = true }
 stakedex_spl_stake_pool = { workspace = true }
