use slot number for bridge stake seed

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+bincode = { workspace = true }
 jupiter-core = { workspace = true }
 rust_decimal = "^1.0"
 solana-program = { workspace = true }
