more specific err types for quoting + test, fix bug from rpc giving outdated sysvar clock

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -12,3 +12,4 @@ solana-program = { workspace = true }
 spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_interface = { workspace = true }
+thiserror = { workspace = true }
