--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "^1.0"
 bincode = "^1.0"
 borsh = "^0.9"
 jupiter-core = { git = "https://github.com/jup-ag/rust-amm-implementation", rev = "8e360617"}
+lazy_static = "^1.0"
+solana-client = "^1.9"
 solana-program = "^1.9"
 solana-sdk = "^1.9"
 spl-token = "^3.0"
@@ -26,3 +28,4 @@ stakedex_socean_stake_pool = { path = "./libs/socean_stake_pool" }
 stakedex_spl_stake_pool = { path = "./libs/spl_stake_pool" }
 stakedex_unstake_it = { path = "./libs/unstake_it" }
 stakedex_withdraw_stake_interface = { path = "./interfaces/stakedex_withdraw_stake_interface" }
+thiserror = "^1.0"
