--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -18,3 +18,7 @@ stakedex_sdk_common = { workspace = true }
 stakedex_socean_stake_pool = { workspace = true }
 stakedex_spl_stake_pool = { workspace = true }
 stakedex_unstake_it = { workspace = true }
+
+[dev-dependencies]
+solana-client.workspace = true
+lazy_static.workspace = true
