--- a/interfaces/stakedex_deposit_sol_interface/Cargo.toml
+++ b/interfaces/stakedex_deposit_sol_interface/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-borsh = { workspace = true }
-solana-program = { workspace = true }
+borsh.workspace = true
+solana-program.workspace = true
