--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
-jupiter-core = { workspace = true }
+jupiter-core-interface = { workspace = true }
 solana-sdk = { workspace = true }
 spl-token = { workspace = true }
 stakedex_eversol_stake_pool = { workspace = true }
@@ -18,6 +18,8 @@ stakedex_sdk_common = { workspace = true }
 stakedex_socean_stake_pool = { workspace = true }
 stakedex_spl_stake_pool = { workspace = true }
 stakedex_unstake_it = { workspace = true }
+
+itertools = "0.10.5"
 
 [dev-dependencies]
 solana-client.workspace = true
