--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
 anyhow = "^1.0"
 bincode = "^1.0"
 borsh = "^0.9"
-jupiter-core-interface = { path = "../../jupiter-repos/jupiter-core-interface" }
+jupiter-amm-interface = { path = "../../jupiter-repos/jupiter-core-interface" }
 lazy_static = "^1.0"
 solana-client = "^1.9"
 solana-program = "^1.9"
