--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,7 +11,7 @@ solana-program = { workspace = true }
 spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_interface = { workspace = true }
-jupiter-core-interface = { workspace = true }
+jupiter-amm-interface = { workspace = true }
 thiserror = { workspace = true }
 
 serde_json = "1.0.95"
