make bridge_stake_seed random, so unlikely self collision

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -14,3 +14,5 @@ spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_interface = { workspace = true }
 thiserror = { workspace = true }
+
+rand = "0.8.5"
