wip test all cases

--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 jupiter-amm-interface = { workspace = true }
+solana-account-decoder = "^1.9"
 solana-sdk = { workspace = true }
+spl-associated-token-account = "1.1.1"
 spl-token = { workspace = true }
 stakedex_eversol_stake_pool = { workspace = true }
 stakedex_interface = { workspace = true }
