--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,16 @@
 [workspace]
 
-members = [
-    "stakedex_sdk",
-    "common",
-    "libs/*",
-    "interfaces/*"
-]
+members = ["stakedex_sdk", "common", "libs/*", "interfaces/*"]
 
 [workspace.dependencies]
 anyhow = "^1.0"
 bincode = "^1.0"
-borsh = "^0.9"
+borsh = "^0.10"
 jupiter-amm-interface = "~0.3.0"
 lazy_static = "^1.0"
-solana-client = "^1.9"
-solana-program = "^1.9"
-solana-sdk = "^1.9"
+solana-client = "~1.16"
+solana-program = "~1.16"
+solana-sdk = "~1.16"
 spl-token = "^3.0"
 stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_interface" }
 stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
