compile time keys

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ members = [
 [workspace.dependencies]
 anyhow = "^1.0"
 bincode = "^1.0"
-borsh = ">=0.9"
+borsh = "^0.9"
 jupiter-amm-interface = "~0.3.2"
 lazy_static = "^1.0"
 num-derive = ">=0.1"
 num-traits = ">=0.1"
+rust_decimal = "^1.0"
+sanctum-macros = "^1.2"
 serde = "^1"
 solana-client = "^1.9"
 solana-program = "^1.9"
