--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 anyhow = { workspace = true }
 bincode = { workspace = true }
 jupiter-amm-interface = { workspace = true }
-rust_decimal = "^1.0"
+rust_decimal = { workspace = true }
+sanctum-macros = { workspace = true }
 solana-program = { workspace = true }
 solana-sdk = { workspace = true }
 spl-token = { workspace = true }
