--- a/libs/marinade/Cargo.toml
+++ b/libs/marinade/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 borsh = { workspace = true }
-marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", rev = "d625979" }
+marinade_finance_interface = { workspace = true }
 solana-program = { workspace = true }
+solana-sdk = { workspace = true }
 spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_deposit_stake_interface = { workspace = true }
+stakedex_withdraw_stake_interface = { workspace = true }
 stakedex_sdk_common = { workspace = true }
