--- a/libs/socean_stake_pool/Cargo.toml
+++ b/libs/socean_stake_pool/Cargo.toml
@@ -11,8 +11,7 @@ bincode = { workspace = true }
 borsh = { workspace = true }
 solana-program = { workspace = true }
 
-spl-stake-pool = "^0.6.4"
-# { git = "https://github.com/igneous-labs/solana-program-library", branch = "release/v0.1"} incompatible with solana-program ^1.9
+spl-stake-pool = { workspace = true }
 
 spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
