--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -3,7 +3,8 @@ name = "stakedex_sdk"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+mainnet-test = []
 
 [dependencies]
 anyhow = { workspace = true }
@@ -24,4 +25,6 @@ itertools = "0.10.5"
 
 [dev-dependencies]
 solana-client.workspace = true
+solana-program-test.workspace = true
 lazy_static.workspace = true
+sanctum-solana-test-utils.workspace = true
