--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -7,20 +7,18 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+itertools = { workspace = true }
 jupiter-amm-interface = { workspace = true }
-solana-account-decoder = "^1.9"
+solana-account-decoder = { workspace = true }
 solana-sdk = { workspace = true }
-spl-associated-token-account = "1.1.1"
+spl-associated-token-account = { workspace = true }
 spl-token = { workspace = true }
 stakedex_interface = { workspace = true }
 stakedex_lido = { workspace = true }
 stakedex_marinade = { workspace = true }
 stakedex_sdk_common = { workspace = true }
-stakedex_socean_stake_pool = { workspace = true }
 stakedex_spl_stake_pool = { workspace = true }
 stakedex_unstake_it = { workspace = true }
-
-itertools = "0.10.5"
 
 [dev-dependencies]
 solana-client.workspace = true
