--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ borsh = ">=0.9,<1.0.0"
 itertools = ">=0.1"
 jupiter-amm-interface = "~0.3.2"
 lazy_static = "^1.0"
-lido = { git = "https://github.com/jup-ag/solido", rev = "ec25a9b", features = ["no-entrypoint"] }
-marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", rev = "4d1895b" }
+# set git dependencies to branch instead of locking to rev so that consumers can upgrade easily
+lido = { git = "https://github.com/jup-ag/solido", branch = "jupiter", features = ["no-entrypoint"] } # rev = "ec25a9b"
+marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", branch = "master" } # rev = "4d1895b"
 num-derive = ">=0.1"
 num-traits = ">=0.1"
 rust_decimal = ">=1.0,<=1.32.0" # anything >1.32 uses borsh ^1
-sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", rev = "ada4de3" }
+sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", branch = "master" } # rev = 25eaf5f
 sanctum-macros = "^1.2"
 serde = "^1"
 spl-associated-token-account = { version = ">=1", features = ["no-entrypoint"] }
