--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 
 members = [
+    "jup_interface",
     "stakedex_sdk",
     "common",
     "libs/*",
@@ -20,6 +21,7 @@ lido = { git = "https://github.com/jup-ag/solido", branch = "jupiter", features 
 marinade_finance_interface = { git = "https://github.com/igneous-labs/marinade_finance_interface", branch = "master" } # rev = "4d1895b"
 num-derive = ">=0.1"
 num-traits = ">=0.1"
+rand = "0.8.5"
 rust_decimal = ">=1.0,<=1.32.0" # anything >1.32 uses borsh ^1
 sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", branch = "master" } # rev = 70e955f
 sanctum-macros = "^1.2"
@@ -42,6 +44,7 @@ solana-client = "^1"
 stakedex_deposit_sol_interface = { path = "./interfaces/stakedex_deposit_sol_interface" }
 stakedex_deposit_stake_interface = { path = "./interfaces/stakedex_deposit_stake_interface" }
 stakedex_interface = { path = "./interfaces/stakedex_interface" }
+stakedex_jup_interface = { path = "./jup_interface" }
 stakedex_lido = { path = "./libs/lido" }
 stakedex_marinade = { path = "./libs/marinade" }
 stakedex_sdk_common = { path = "./common" }
