--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = { workspace = true }
 bincode = { workspace = true }
 jupiter-amm-interface = { workspace = true }
+rand = { workspace = true }
 rust_decimal = { workspace = true }
 sanctum-macros = { workspace = true }
 solana-program = { workspace = true }
@@ -15,5 +16,3 @@ spl-token = { workspace = true }
 stakedex_deposit_sol_interface = { workspace = true }
 stakedex_interface = { workspace = true }
 thiserror = { workspace = true }
-
-rand = "0.8.5"
