--- a/libs/unstake_it/Cargo.toml
+++ b/libs/unstake_it/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+jupiter-amm-interface = { workspace = true }
 solana-program = { workspace = true }
 spl-math = { workspace = true }
 spl-token = { workspace = true }
