--- a/stakedex_sdk/Cargo.toml
+++ b/stakedex_sdk/Cargo.toml
@@ -19,6 +19,7 @@ solana-sdk = { workspace = true }
 spl-associated-token-account = { workspace = true }
 spl-token = { workspace = true }
 stakedex_interface = { workspace = true }
+stakedex_jup_interface = { workspace = true }
 stakedex_lido = { workspace = true }
 stakedex_marinade = { workspace = true }
 stakedex_sdk_common = { workspace = true }
