--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rust_decimal = ">=1.0,<=1.32.0" # anything >1.32 uses borsh ^1
 sanctum-lst-list = { git = "https://github.com/igneous-labs/sanctum-lst-list.git", branch = "master" } # rev = e05d193
 sanctum-macros = "^1.2"
 serde = "^1"
+serde_json = "^1"
 spl-associated-token-account = { version = ">=1", features = ["no-entrypoint"] }
 spl-math = { version = "0.1.0", features = ["no-entrypoint"]}
 spl-stake-pool = { version = "^1", features = ["no-entrypoint"] }
