--- a/libs/spl_stake_pool/Cargo.toml
+++ b/libs/spl_stake_pool/Cargo.toml
@@ -17,6 +17,7 @@ stakedex_deposit_sol_interface = { workspace = true }
 stakedex_deposit_stake_interface = { workspace = true }
 stakedex_sdk_common = { workspace = true }
 stakedex_withdraw_stake_interface = { workspace = true }
+stakedex_withdraw_sol_interface = { workspace = true }
 
 [dev-dependencies]
 stakedex_jup_interface = { workspace = true }
