it was dependabot all along

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ spl-associated-token-account = { version = ">=1", features = ["no-entrypoint"] }
 # but 2.0.1 patches those breaking changes.
 # Ideally, this vers requirement should be "anything >=1.0 except 2.0.0"
 # but theres no way to express that in cargo dep vers syntax
-spl-stake-pool = { version = ">=1.0", features = ["no-entrypoint"] } 
+spl-stake-pool = { git = "https://github.com/igneous-labs/stake-pool.git", branch = "loosen-deps", features = ["no-entrypoint"] } 
 spl-token = ">=3.0"
 thiserror = "^1.0"
 tokio = "^1.0"
